--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="10px">
     <tr>
-    <td><img src="C:/Users/jyesht/Downloads/yu21.png" alt="author image" width="300px" height="300px" border=black/></td>
+    <td><img src="yu21.png" alt="author image" width="300px" height="300px" border=black/></td>
     <td><h1>jyesht aryan</h1>
     <em>founder of cryptosheesh and <a href="#">PH</a></em>
     <br>
