--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
     <td><img src="https://raw.githubusercontent.com/blackhat-jyesht/cv/main/yu21.png" alt="author image" width="300px" height="300px" border=black/></td>
     <td><h1>jyesht aryan</h1>
-    <em>founder of cryptosheesh and <a href="#">PH</a></em>
+    <em>founder of cryptosheesh and <a href="https://en.wikipedia.org/wiki/Elon_Musk">PH</a></em>
     <br>
     <em>i aim to be the best <strong>web developer.</strong><em></td>
     </tr>
